--- a/env.yml
+++ b/env.yml
@@ -2,14 +2,14 @@ name: phyre
 channels:
   - conda-forge
 dependencies:
-  - python=3.6
+  - python=3.9
   - sed
   - nodejs
-  - thrift-cpp=0.11.0
+  - thrift-cpp=0.13.0
   - wget
-  - pybind11=2.2.4
+  - pybind11
   - cmake
-  - boost=1.67.0
+  - boost
   - setuptools
   - pip
   - pip:
